# midi-actions

./: .gitignore  Cargo.toml  LICENSE  README.md  config.toml  flake.nix  result
src/: main.rs
