[package]
name = "midi-actions"
version = "0.1.0"
edition = "2021"

[dependencies]
midir = "0.9"
evdev = { version = "0.12", optional = true }
enigo = { version = "0.3", optional = true, default-features = false }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
clap = { version = "4.4", features = ["derive"] } # For CLI flags
anyhow = "1.0"

[features]
default = ["linux"]
linux = ["evdev", "enigo/x11rb"]
macos = ["enigo"]
windows = ["enigo"]
